--- a/index.html
+++ b/index.html
@@ -117,34 +117,23 @@
           <div class="main-product__category">
             <div class="main-product__category-details">
               <div class="main-product__category-images">
-                <img style="width: 100%"  
+                <!-- <img
+                  style="width: 100%"
                   src="https://new-ella-demo.myshopify.com/cdn/shop/products/31_4ed249af-b411-4b46-b696-231e2a12332d.jpg?v=1637823791"
-                />
+                /> -->
               </div>
               <div class="main-product__category-price"></div>
             </div>
             <div class="main-product__category-details">
-              <div class="main-product__category-images">
-                <img
-                  src="https://new-ella-demo.myshopify.com/cdn/shop/products/40-compressor.png?v=1637823785"
-                />
-              </div>
+              <div class="main-product__category-images"></div>
               <div class="main-product__category-price"></div>
             </div>
             <div class="main-product__category-details">
-              <div class="main-product__category-images">
-                <img
-                  src="https://new-ella-demo.myshopify.com/cdn/shop/products/23_328753b5-3ea2-43c9-9a32-84f68cefce76.jpg?v=1637823762"
-                />
-              </div>
+              <div class="main-product__category-images"></div>
               <div class="main-product__category-price"></div>
             </div>
             <div class="main-product__category-details">
-              <div class="main-product__category-images">
-                <img
-                  src="https://new-ella-demo.myshopify.com/cdn/shop/products/12-compressor_69d9ff1a-1692-46bc-b90f-d7c0b579665a.png?v=1637823671"
-                />
-              </div>
+              <div class="main-product__category-images"></div>
               <div class="main-product__category-price"></div>
             </div>
           </div>
